--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -5,8 +5,8 @@
   |============================
 */
 @import url('./reset.css');
-@import url('./vite-promo.css');
 @import url('./header.css');
+@import url('./2-page.css');
 
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
